# step-playbook

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  ansible.cfg  ci-requirements.txt  hosts  old-requirements.txt  packer_playbook.yml  pyproject.toml  requirements.txt  setup-ec2-redash.yml  setup-ec2.yml  setup-jupyter.yml  single-ec2.yml
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: auto-approve.yml  auto-merge.yml  autoapprove-dependabot.yaml  automerge-dependabot.yml  pythonpackage.yml  upgrade-dependencies.yaml
configuration/: buildspec.yml
group_vars/: all.yml
packer/: README.md  build-script.json  ec2-user-data  local_playbook.yml  packer_playbook.yml  vars.json
roles/common/tasks/: main.yml
roles/jupyter/defaults/: main.yml
roles/jupyter/files/: config.py  jupyter_notebook_config.py  kernel-install.R  notebook-environmentfile  notebook.service  pyproject.toml  requirements-rlang.txt  requirements.txt
roles/jupyter/handlers/: main.yml
roles/jupyter/tasks/: main.yml
roles/jupyter/templates/: jupyter_notebook_config.py.j2  notebook.service.j2
roles/jupyter/tests/: test.yml
terraform/: README.md  main.tf  prod.tfvars  user.json  variables.tf
