[tool.poetry]
name = "step-playbook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "step_playbook"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^7.0"
boto3 = "^1.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.1"
ansible-lint = "^5.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
