[tool.poetry]
name = "step-playbook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "step_playbook"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^8.4"
boto3 = "^1.28"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ansible-lint = { version = "^6.16.0", markers = "platform_system != 'Windows'" }
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
