[tool.poetry]
name = "step-playbook"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "step_playbook"}]

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^8.7"
boto3 = "^1.34"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ansible-lint = { version = "^6.22.2", markers = "platform_system != 'Windows'" }
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
