[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^7.2.1"
boto3 = "^1.34.151"
numpy = "^2.0.0"
pandas = "^2.2.2"
ansible = "^8.5.0"
pyhive = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
